NEWS - OpenPrinting CUPS Filters v1.11.6 - 2016-10-31
-----------------------------------------------------

CHANGES IN V1.12.0

	- cups-browsed: Added new "NewIPPPrinterQueuesShared"
	  directive to cups-browsed.conf, which allows to decide
	  whether the auto-created local print queue for an newly
	  discovered IPP network printer will be shared or not. For
	  printers discovered earlier, cups-browsed remembers the
	  previous setting.
	- cups-browsed: If a user changes the printer-is-shared bit of
	  an auto-created print queue for an IPP network printer (not
	  for a remote CUPS queue), record this fact and recover the
	  change when creating this queue in the next session.
	- cups-browsed: For automatic creation of print queues for IPP
	  network printers also allow only creating queues for IPP
	  Everywhere printers and not only for all suitable printers,
	  configurable via the CreateIPPPrinterQueues directive in
	  cups-browsed.conf.

CHANGES IN V1.11.6

	- pdftops: Do not default to simply "pdftops" when calling the
	  Poppler pdftops utility, as the $PATH of CUPS when running
	  filters/backends starts with /usr/lib/cups/filter/ and then
	  pdftops would call itself (Bug #1380).

CHANGES IN V1.11.5

	- cups-browsed: Fixed several typos in the documentation (Bug
	  #1378).
	- gstoraster, mupdftoraster, pdftops, sys5ippprinter: Use
	  execvp() and execvpe() to call programs so that the $PATH
	  environment variable gets used to find the programs (Bug
	  #1378).
	- build system: Several fixes, especially to make it work when
	  cross-compiling or using a build server (Bug #1378).
	- cups-browsed: Silenced a warning.
	- cups-browsed: For remote CUPS queues with a dot in their
	  name no local queue got created (Bug #1379).
	- pdftopdf: Do the page logging also for IPP Everywhere
	  printers which use the PWG Raster data format as the
	  ...toraster filters being the last filter then do not log.
	- gstoraster, pdftoraster: Let filters generate PWG Raster if